--- a/style.css
+++ b/style.css
@@ -704,6 +704,9 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 h2 {
@@ -907,12 +910,13 @@ h4 {
     }
     .navbar .nav {
         padding-top: 0;
-        border-top: 1px solid rgba(0, 0, 0, .2);
         float: none;
     }
     .navbar.row {
         margin-left: 0;
         margin-right: 0;
+        display: flex;
+        justify-content: center;
     }
     .site-navigation {
         position: inherit;
@@ -922,15 +926,12 @@ h4 {
     }
     .nav > li {
         margin-top: 0;
-        border-bottom: 1px solid rgba(0, 0, 0, .1);
-        background: rgba(0, 0, 0, .05);
+
         text-align: left;
         padding-left: 15px;
-        width: 100%;
+
     }
-    .nav > li:hover {
-        background: rgba(0, 0, 0, .08);
-    }
+
     .dropdown .dropdown a .caret {
         float: none;
         margin: 5px 0 0 10px;
