--- a/style.css
+++ b/style.css
@@ -593,7 +593,6 @@ a[data-lightbox]:hover img {
 .close-lightbox {
     color: #FFF;
     font-size: 30px;
-    position: absolute;
     top: 20px;
     right: 20px;
     background: rgba(0, 0, 0, .5);
@@ -707,8 +706,12 @@ p {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-bottom: 12px;
 }
-
+.left10{
+    display: flex;
+    justify-content: center;
+}
 h2 {
     font-size: 22px;
     line-height: 1.4em;
